# dictionary-nouns

./: pyproject.toml
