[project]
name = "dictionary-nouns"
version = "0.1.0"
description = ""
authors = [
    {name = "Dante Dupont",email = "dmxdupont@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "dictionary_nouns", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
